# bareasgi-sspi

./: README.md  mypy.ini  pyproject.toml
bareasgi_sspi/: __init__.py  constants.py  helpers.py  session_manager.py  spnego_middleware.py
demos/: example_spnego.py
