[tool.poetry]
name = "bareasgi-sspi"
version = "4.0.0-alpha2"
description = "ASGI middleware for SSPI"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_sspi" }
]
repository = "https://github.com/rob-blackbourn/bareASGI-SSPI"

[tool.poetry.dependencies]
python = "^3.8"
bareutils = "^4.0.1"
pyspnego = "^0.6.0"
jetblack-asgi-typing = "^0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.8"
mypy = "^0.910"
hypercorn = "^0.14.3"
bareasgi = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
