[tool.poetry]
name = "bareasgi-sspi"
version = "4.0.0-rc1"
description = "bareASGI middleware for SSPI"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Environment :: Win32 (MS Windows)",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Typing :: Typed"
]
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareasgi_sspi" }
]
repository = "https://github.com/rob-blackbourn/bareASGI-SSPI"

[tool.poetry.dependencies]
python = "^3.8"
bareasgi = "^4.1.0"
pyspnego = "^0.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pylint = "^2.8"
mypy = "^0.910"
hypercorn = "^0.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
